<resources>
    <!-- Names -->
    <string name="app_name">School Supplies</string>
    <string name="general_tools_tab_name">General Tool</string>
    <string name="special_tools_tab_name">Special Tools</string>
    <!-- Titles -->
    <string name="orders_menu_title">Orders</string>
    <string name="home_menu_title">Home</string>
    <!-- Hints -->
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="name_hint">name</string>
    <string name="current_year_hint">current year</string>
    <string name="phone_number_hint">phone number</string>
    <string name="school_name_hint">school name</string>
    <string name="address_hint">address</string>
    <!-- Messages -->
    <string name="login">login</string>
    <string name="sign_up">Sign up</string>
    <string name="just_moment">Just a moment..</string>

    <string name="welcome_msg">Welcome</string>
    <string name="login_msg">Login</string>
    <string name="create_an_account_msg">Create an account, Sign Up</string>
    <string name="i_have_an_account_msg">I have An Account, Login</string>
    <string name="sign_up_msg">Sign up</string>
    <string name="request_msg">Request</string>
    <string name="request_msg_reject">Rejected</string>
    <string name="request_msg_accept">Accepted</string>
    <string name="details_msg">Details</string>
    <string name="request_donate_msg">This user made a request for this widget that you offered to donate</string>
    <string name="would_you_like_to_msg">Would you like to</string>
    <string name="accept_msg">Accept</string>
    <string name="or_msg">or</string>
    <string name="add_tool">Add Tool</string>
    <string name="tool_name">Tool Name</string>
    <string name="search_name">Search By Name</string>
    <string name="details_tool">Details</string>
    <string name="type_tool">Tool Type</string>
    <string name="save">Save</string>
    <string name="upload_photo_tool">Upload photo</string>
    <string name="upload_img_tool">Download From Your Device</string>
    <string name="search">Search</string>
    <string name="message">Message</string>
    <string name="order">Orders</string>
    <string name="error_create_user">Something went wrong, unable to create user.</string>

    <string name="email_is_empty">Email cannot be empty</string>
    <string name="user_is_empty">User Name cannot be empty</string>
    <string name="school_is_empty">School Name cannot be empty</string>
    <string name="phone_is_empty">Phone Number cannot be empty</string>
    <string name="address_is_empty">Address cannot be empty</string>
    <string name="year_is_empty">currentYear cannot be empty</string>
    <string name="password_is_empty">Password cannot be less than 6 characters </string>

    <string name="enter_email">UserName</string>
    <string name="enter_password">PASSWORD</string>
    <string name="enter_password_again">PASSWORD AGAIN</string>
    <string name="password_confirm">The password confirmation is incorrect</string>
    <string name="first_year">First year</string>
    <string name="sec_year">Second year</string>
    <string name="third_year">Third year</string>
    <string name="four_year">Fourth year</string>
    <!-- Demo -->
    <string name="description_demo">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="name_demo">ABDO-AR</string>
    <!-- Descriptions -->
    <string name="app_icon_des">AppIcon imageView des</string>
    <string name="splash_icon_des">Splash icon des</string>
    <string name="messanger_icon_des">Messenger icon des</string>
    <string name="adding_floating_action_button_des">Adding floating action button des</string>
    <string name="home_tabs_des">Home tabs des</string>
    <string name="tool_image_view_des">Tool image view des</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tool_image_msg">You have to upload tool photo</string>
    <string name="tool_cannot_empty_msg">Tool name cannot be empty</string>
    <string name="you_have_detail_tool_msg">You have to detail your tool</string>
    <string name="specify_type_msg">You need to specify a type for your tool</string>
    <string name="something_wrong_in_upload_msg">Something wrong in uploading tool</string>
    <string name="failure_msg">Failure to get data</string>
    <string name="view_by_year_msg">View By Year</string>
    <string name="orderd_msg">Message</string>
    <string name="send_message_to_msg">"send message to "</string>
    <string name="cancel_msg">Cancel</string>
    <string name="set_your_msg">set your message</string>
    <string name="cannot_sent_empty_msg">it cannot be sent empty !!, please write message</string>
    <string name="has_been_sent_msg">"has been sent "</string>
</resources>