<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:backgroundTint="@color/white"
    android:elevation="9dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="9dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/accept_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="#2c9f45"
            android:text="@string/accept_msg"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/like_text_view" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/cancel_msg"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/like_text_view"
            app:strokeColor="#fd5353" />

        <ImageButton
            android:id="@+id/message_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/messanger_icon_des"
            android:src="@drawable/ic_messanger"
            android:text="@string/request_msg"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView2"
            android:layout_width="0dp"
            android:layout_height="@dimen/_180sdp"
            android:layout_margin="8dp"
            android:elevation="9dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="9dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/request_text_view">

            <ImageView
                android:id="@+id/tool_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/tool_image_view_des"
                android:scaleType="centerCrop"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/user_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/name_demo"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toStartOf="@+id/message_button"
            app:layout_constraintStart_toEndOf="@+id/materialCardView3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/request_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/request_donate_msg"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView3" />

        <TextView
            android:id="@+id/like_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/would_you_like_to_msg"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView2" />

        <TextView
            android:id="@+id/or_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/or_msg"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toStartOf="@+id/cancel_button"
            app:layout_constraintStart_toEndOf="@+id/accept_button"
            app:layout_constraintTop_toBottomOf="@+id/like_text_view" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView3"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="8dp"
            android:elevation="9dp"
            app:cardCornerRadius="888dp"
            app:cardElevation="9dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/user_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/tool_image_view_des"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>