<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00304a"
    tools:context=".ui.fragments.welcome.WelcomeFragment">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="500dp"
            android:layout_height="500dp"
            android:layout_gravity="end"
            android:contentDescription="@string/splash_icon_des"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_login_foreground"
            tools:layout_editor_absoluteY="121dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_icon_des"
            android:src="@drawable/ic_foreground_splash_icon"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="57dp" />

    </FrameLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:elevation="9dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay_DefaultCardOverlay"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/welcome_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/welcome_msg"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/black"
                android:textSize="@dimen/_22ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/login_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="#07304c"
                android:text="@string/login_msg"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/white"
                android:textSize="@dimen/_22ssp"
                app:layout_constraintBottom_toTopOf="@+id/or_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/or_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/or_msg"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/black"
                android:textSize="@dimen/_22ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/color_primary_foreground_dark"
                android:text="@string/sign_up_msg"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/white"
                android:textSize="@dimen/_22ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>