<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.tools.special.SpecialToolsFragment">

    <HorizontalScrollView
        android:id="@+id/scroll_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/view_by_year_msg"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/first_year_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/white"
                android:text="@string/first_year"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/gray"
                android:textSize="@dimen/_12ssp" />

            <Button
                android:id="@+id/sec_year_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:backgroundTint="@color/white"
                android:text="@string/sec_year"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/gray"
                android:textSize="@dimen/_12ssp" />

            <Button
                android:id="@+id/third_year_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/white"
                android:text="@string/third_year"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/gray"
                android:textSize="@dimen/_12ssp" />

            <Button
                android:id="@+id/four_year_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/white"
                android:text="@string/four_year"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/gray"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

    </HorizontalScrollView>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_menu">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/special_tools_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/tool_item_view" />

        <ProgressBar
            android:id="@+id/special_tools_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/color_primary_foreground_dark"
            android:visibility="visible" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>