<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:backgroundTint="@color/white"
    android:elevation="9dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="9dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/request_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/request_msg"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView2" />

        <TextView
            android:id="@+id/user_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/name_demo"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toStartOf="@+id/request_button"
            app:layout_constraintStart_toEndOf="@+id/materialCardView3"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView2" />

        <TextView
            android:id="@+id/details_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:text="@string/details_msg"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView3" />

        <TextView
            android:id="@+id/tool_description_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/description_demo"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#989494"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_text_view" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView2"
            android:layout_width="0dp"
            android:layout_height="@dimen/_180sdp"
            android:layout_margin="8dp"
            android:elevation="9dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="9dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/tool_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/tool_image_view_des"
                android:scaleType="centerCrop"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView3"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="8dp"
            android:elevation="9dp"
            app:cardCornerRadius="888dp"
            app:cardElevation="9dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView2">

            <ImageView
                android:id="@+id/user_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/tool_image_view_des"
                android:scaleType="centerCrop"
                android:src="@drawable/app_placeholder"
                tools:srcCompat="@tools:sample/avatars" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>